[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32-no_std = {default-features = false,  version = "0.7.3"}
blake2-rfc = "0.2.18"
tiny-keccak = { version = "2.0.2", features = [ "shake", "sha3", "kmac", "tuple_hash", "parallel_hash", "k12", "fips202", "sp800"] }
sha2 = "0.9.5"
byteorder = "1.4.3"
twox-hash = "1.6.0"
ripemd160 = "0.9.1"
base58 = "0.1.0"
hex = "0.4.3"